--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "@enso-ui/datepicker": "^1.0.0",
     "@enso-ui/modal": "^1.0.0",
     "@enso-ui/progress-bar": "^1.0.0",
     "@enso-ui/tabs": "^1.0.0",
