--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@enso-ui/datepicker": "^1.0.0",
     "@enso-ui/modal": "^1.0.0",
     "@enso-ui/progress-bar": "^1.0.0",
+    "@enso-ui/switch": "^1.0.0",
     "@enso-ui/tabs": "^1.0.0",
     "@enso-ui/toastr": "^1.0.0",
     "@enso-ui/typeahead": "^1.0.0"
