--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@enso-ui/datepicker": "^1.0.0",
+    "@enso-ui/filters": "^1.0.0",
     "@enso-ui/modal": "^1.0.0",
     "@enso-ui/progress-bar": "^1.0.0",
     "@enso-ui/switch": "^1.0.0",
