--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@enso-ui/card": "^1.0.0",
     "@enso-ui/datepicker": "^1.0.0",
+    "@enso-ui/dropdown": "^1.0.0",
     "@enso-ui/dropdown-indicator": "^1.0.0",
     "@enso-ui/filters": "^1.0.0",
     "@enso-ui/loader": "^1.0.0",
@@ -45,6 +46,7 @@
     "@enso-ui/tabs": "^1.0.0",
     "@enso-ui/toastr": "^1.0.0",
     "@enso-ui/transitions": "^1.0.0",
-    "@enso-ui/typeahead": "^1.0.0"
+    "@enso-ui/typeahead": "^1.0.0",
+    "bulma": "^0.7.2"
   }
 }
