--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@enso-ui/charts": "^1.0.0",
     "@enso-ui/confirmation": "^1.0.0",
     "@enso-ui/datepicker": "^1.0.0",
+    "@enso-ui/divider": "^1.0.0",
     "@enso-ui/dropdown": "^1.0.0",
     "@enso-ui/dropdown-indicator": "^1.0.0",
     "@enso-ui/filters": "^1.0.0",
     "@enso-ui/loader": "^1.0.0",
     "@enso-ui/modal": "^1.0.0",
+    "@enso-ui/money": "^1.0.2",
     "@enso-ui/progress-bar": "^1.0.0",
     "@enso-ui/select": "^1.0.0",
     "@enso-ui/switch": "^1.0.0",
