--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "@enso-ui/accessories": "^1.0.16",
     "@enso-ui/card": "^1.0.0",
     "@enso-ui/charts": "^1.0.0",
     "@enso-ui/confirmation": "^1.0.0",
@@ -42,12 +43,14 @@
     "@enso-ui/dropdown": "^1.0.0",
     "@enso-ui/dropdown-indicator": "^1.0.0",
     "@enso-ui/filters": "^1.0.0",
+    "@enso-ui/forms": "^1.0.18",
     "@enso-ui/loader": "^1.0.0",
     "@enso-ui/modal": "^1.0.0",
     "@enso-ui/money": "^1.0.2",
     "@enso-ui/progress-bar": "^1.0.0",
     "@enso-ui/select": "^1.0.0",
     "@enso-ui/switch": "^1.0.0",
+    "@enso-ui/tables": "^1.0.17",
     "@enso-ui/tabs": "^1.0.0",
     "@enso-ui/toastr": "^1.0.0",
     "@enso-ui/typeahead": "^1.0.0",
