--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@enso-ui/accessories": "^1.0.16",
+    "@enso-ui/accessories": "~1.1.0",
     "@enso-ui/card": "^1.0.0",
     "@enso-ui/charts": "^1.0.0",
     "@enso-ui/confirmation": "^1.0.0",
@@ -50,12 +50,12 @@
     "@enso-ui/progress-bar": "^1.0.0",
     "@enso-ui/progress-circle": "^1.0.0",
     "@enso-ui/scroll-to-top": "^1.0.0",
-    "@enso-ui/select": "^1.0.0",
+    "@enso-ui/select": "~1.1.0",
     "@enso-ui/switch": "^1.0.0",
-    "@enso-ui/tables": "^1.0.17",
+    "@enso-ui/tables": "~1.1.0",
     "@enso-ui/tabs": "^1.0.0",
     "@enso-ui/toastr": "^1.0.0",
-    "@enso-ui/typeahead": "^1.0.0",
+    "@enso-ui/typeahead": "~1.1.0",
     "@enso-ui/uploader": "^1.0.0",
     "bulma": "^0.7.2"
   }
