--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@enso-ui/divider": "^1.0.0",
     "@enso-ui/dropdown": "^1.0.0",
     "@enso-ui/dropdown-indicator": "^1.0.0",
-    "@enso-ui/filters": "^1.0.0",
+    "@enso-ui/filters": "~1.1.0",
     "@enso-ui/forms": "~1.2.0",
     "@enso-ui/loader": "^1.0.0",
     "@enso-ui/modal": "^1.0.0",
