--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@enso-ui/divider": "^1.0.0",
     "@enso-ui/dropdown": "^1.0.0",
     "@enso-ui/dropdown-indicator": "^1.0.0",
-    "@enso-ui/filters": "^1.1.3",
+    "@enso-ui/filters": "1.1.x",
     "@enso-ui/forms": "^1.2.2",
     "@enso-ui/loader": "^1.0.0",
     "@enso-ui/modal": "^1.0.11",
@@ -52,7 +52,7 @@
     "@enso-ui/scroll-to-top": "^1.0.0",
     "@enso-ui/select": "^1.1.0",
     "@enso-ui/switch": "^1.0.0",
-    "@enso-ui/tables": "^1.1.0",
+    "@enso-ui/tables": "1.1.x",
     "@enso-ui/tabs": "^1.0.25",
     "@enso-ui/toastr": "^1.0.0",
     "@enso-ui/typeahead": "^1.1.0",
