--- a/package.json
+++ b/package.json
@@ -34,29 +34,29 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@enso-ui/accessories": "^2.0.1",
-    "@enso-ui/card": "^1.0.22",
-    "@enso-ui/charts": "^1.0.0",
-    "@enso-ui/confirmation": "^1.0.11",
-    "@enso-ui/datepicker": "^1.0.0",
-    "@enso-ui/divider": "^1.0.0",
-    "@enso-ui/dropdown": "^1.0.0",
-    "@enso-ui/dropdown-indicator": "^1.0.0",
+    "@enso-ui/accessories": "2.0.x",
+    "@enso-ui/card": "1.0.x",
+    "@enso-ui/charts": "1.0.x",
+    "@enso-ui/confirmation": "1.0.x",
+    "@enso-ui/datepicker": "1.0.x",
+    "@enso-ui/divider": "1.0.x",
+    "@enso-ui/dropdown": "1.0.x",
+    "@enso-ui/dropdown-indicator": "1.0.x",
     "@enso-ui/filters": "1.1.x",
-    "@enso-ui/forms": "^1.2.2",
-    "@enso-ui/loader": "^1.0.0",
-    "@enso-ui/modal": "^1.0.11",
-    "@enso-ui/money": "^1.0.7",
-    "@enso-ui/progress-bar": "^1.0.0",
-    "@enso-ui/progress-circle": "^1.0.0",
-    "@enso-ui/scroll-to-top": "^1.0.0",
-    "@enso-ui/select": "^1.1.0",
-    "@enso-ui/switch": "^1.0.0",
+    "@enso-ui/forms": "1.2.x",
+    "@enso-ui/loader": "1.0.x",
+    "@enso-ui/modal": "1.0.x",
+    "@enso-ui/money": "1.0.x",
+    "@enso-ui/progress-bar": "1.0.x",
+    "@enso-ui/progress-circle": "1.0.x",
+    "@enso-ui/scroll-to-top": "1.0.x",
+    "@enso-ui/select": "1.1.x",
+    "@enso-ui/switch": "1.0.x",
     "@enso-ui/tables": "1.1.x",
-    "@enso-ui/tabs": "^1.0.25",
-    "@enso-ui/toastr": "^1.0.0",
-    "@enso-ui/typeahead": "^1.1.0",
-    "@enso-ui/uploader": "^1.0.16",
+    "@enso-ui/tabs": "1.0.x",
+    "@enso-ui/toastr": "1.0.x",
+    "@enso-ui/typeahead": "1.1.x",
+    "@enso-ui/uploader": "1.0.x",
     "bulma": "^0.7.2"
   }
 }
