- splits accessories to new packages - removes App from namespace

--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   "homepage": "https://github.com/enso-ui/bulma#readme",
   "dependencies": {
     "@enso-ui/accessories": "2.4.x",
+    "@enso-ui/addresses": "1.0.x",
     "@enso-ui/card": "1.0.x",
     "@enso-ui/charts": "1.0.x",
+    "@enso-ui/comments": "1.0.x",
     "@enso-ui/checkbox": "1.0.x",
     "@enso-ui/confirmation": "1.0.x",
     "@enso-ui/datepicker": "1.1.x",
+    "@enso-ui/discussions": "1.0.x",
     "@enso-ui/divider": "1.0.x",
+    "@enso-ui/documents": "1.0.x",
     "@enso-ui/dropdown": "1.1.x",
     "@enso-ui/dropdown-indicator": "1.0.x",
     "@enso-ui/filters": "1.4.x",
