--- a/package.json
+++ b/package.json
@@ -24,32 +24,36 @@
   },
   "homepage": "https://github.com/enso-ui/bulma#readme",
   "dependencies": {
-    "@enso-ui/accessories": "2.4.x",
-    "@enso-ui/card": "1.0.x",
-    "@enso-ui/charts": "1.0.x",
-    "@enso-ui/checkbox": "1.0.x",
-    "@enso-ui/confirmation": "1.0.x",
-    "@enso-ui/datepicker": "1.1.x",
-    "@enso-ui/divider": "1.0.x",
-    "@enso-ui/dropdown": "1.1.x",
-    "@enso-ui/dropdown-indicator": "1.0.x",
-    "@enso-ui/filters": "1.4.x",
-    "@enso-ui/forms": "1.4.x",
-    "@enso-ui/loader": "1.0.x",
-    "@enso-ui/modal": "1.0.x",
-    "@enso-ui/money": "1.0.x",
-    "@enso-ui/progress-bar": "1.0.x",
-    "@enso-ui/progress-circle": "1.0.x",
-    "@enso-ui/quick-view": "1.0.x",
-    "@enso-ui/scroll-to-top": "1.0.x",
-    "@enso-ui/select": "1.2.x",
-    "@enso-ui/switch": "1.0.x",
-    "@enso-ui/tables": "1.4.x",
-    "@enso-ui/tabs": "1.0.x",
-    "@enso-ui/toastr": "1.0.x",
-    "@enso-ui/tree-view": "0.0.x",
-    "@enso-ui/typeahead": "1.2.x",
-    "@enso-ui/uploader": "1.0.x",
+    "@enso-ui/accessories": "^3.0",
+    "@enso-ui/addresses": "^2.0",
+    "@enso-ui/card": "^2.0",
+    "@enso-ui/charts": "^2.0",
+    "@enso-ui/checkbox": "^2.0",
+    "@enso-ui/comments": "^2.0",
+    "@enso-ui/confirmation": "^1.0",
+    "@enso-ui/datepicker": "^1.1",
+    "@enso-ui/discussions": "^2.0",
+    "@enso-ui/divider": "^1.0",
+    "@enso-ui/documents": "^2.0",
+    "@enso-ui/dropdown": "^2.0",
+    "@enso-ui/dropdown-indicator": "^1.0",
+    "@enso-ui/filters": "^2.0",
+    "@enso-ui/forms": "^2.0",
+    "@enso-ui/loader": "^2.0",
+    "@enso-ui/modal": "^2.0",
+    "@enso-ui/money": "^1.0",
+    "@enso-ui/progress-bar": "1.0",
+    "@enso-ui/progress-circle": "^1.0",
+    "@enso-ui/quick-view": "^2.0",
+    "@enso-ui/scroll-to-to^p": "1.0",
+    "@enso-ui/select": "^2.0",
+    "@enso-ui/switch": "^1.0",
+    "@enso-ui/tables": "^2.0",
+    "@enso-ui/tabs": "^1.0",
+    "@enso-ui/toastr": "^2.0",
+    "@enso-ui/tree-view": "^1.0",
+    "@enso-ui/typeahead": "^2.0",
+    "@enso-ui/uploader": "^1.0",
     "bulma": "^0.8.0"
   },
   "devDependencies": {
