--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
   "homepage": "https://github.com/enso-ui/bulma#readme",
   "dependencies": {
     "@enso-ui/accessories": "^3.0",
-    "@enso-ui/addresses": "^2.0",
+    "@enso-ui/addresses": "^1.0",
     "@enso-ui/card": "^2.0",
     "@enso-ui/charts": "^2.0",
     "@enso-ui/checkbox": "^2.0",
-    "@enso-ui/comments": "^2.0",
+    "@enso-ui/comments": "^1.0",
     "@enso-ui/confirmation": "^1.0",
     "@enso-ui/datepicker": "^1.1",
-    "@enso-ui/discussions": "^2.0",
+    "@enso-ui/discussions": "^1.0",
     "@enso-ui/divider": "^1.0",
-    "@enso-ui/documents": "^2.0",
+    "@enso-ui/documents": "^1.0",
     "@enso-ui/dropdown": "^2.0",
     "@enso-ui/dropdown-indicator": "^1.0",
     "@enso-ui/filters": "^2.0",
@@ -42,10 +42,10 @@
     "@enso-ui/loader": "^2.0",
     "@enso-ui/modal": "^2.0",
     "@enso-ui/money": "^1.0",
-    "@enso-ui/progress-bar": "1.0",
+    "@enso-ui/progress-bar": "^1.0",
     "@enso-ui/progress-circle": "^1.0",
     "@enso-ui/quick-view": "^2.0",
-    "@enso-ui/scroll-to-top": "1.0",
+    "@enso-ui/scroll-to-top": "^2.0",
     "@enso-ui/select": "^2.0",
     "@enso-ui/switch": "^1.0",
     "@enso-ui/tables": "^2.0",
