--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@enso-ui/loader": "^2.0",
     "@enso-ui/modal": "^2.0",
     "@enso-ui/money": "^1.0",
+    "@enso-ui/orderable-trees": "^1.0.2",
     "@enso-ui/progress-bar": "^1.0",
     "@enso-ui/progress-circle": "^1.0",
     "@enso-ui/quick-view": "^2.0",
